src/parser/y.output

state 0
	$accept: .program $end 

	BEGIN  shift 2
	.  error

	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  BEGIN.classes functions statements END 
	classes: .    (3)

	.  reduce 3 (src line 116)

	classes  goto 3

state 3
	program:  BEGIN classes.functions statements END 
	classes:  classes.class 
	functions: .    (9)

	CLASS  shift 6
	.  reduce 9 (src line 132)

	class  goto 5
	functions  goto 4

state 4
	program:  BEGIN classes functions.statements END 
	functions:  functions.function 

	error  shift 23
	BEGIN  shift 22
	THIS  shift 38
	SKIP  shift 12
	READ  shift 14
	FREE  shift 15
	RETURN  shift 16
	EXIT  shift 17
	PRINT  shift 18
	PRINTLN  shift 19
	IF  shift 20
	WHILE  shift 21
	CALL  shift 24
	FST  shift 39
	SND  shift 40
	INT  shift 31
	BOOL  shift 32
	CHAR  shift 33
	STRING  shift 34
	PAIR  shift 35
	FOR  shift 10
	IDENTIFIER  shift 28
	.  error

	function  goto 8
	statement  goto 9
	statements  goto 7
	assignlhs  goto 29
	pairelem  goto 37
	arrayelem  goto 36
	basetype  goto 25
	typeDef  goto 11
	arraytype  goto 26
	pairtype  goto 27
	assignment  goto 13
	fieldaccess  goto 30

state 5
	classes:  classes class.    (2)

	.  reduce 2 (src line 115)


state 6
	class:  CLASS.IDENTIFIER OPEN fieldlist functions CLOSE 

	IDENTIFIER  shift 41
	.  error


state 7
	program:  BEGIN classes functions statements.END 
	statements:  statements.SEMICOLON statement 

	END  shift 42
	SEMICOLON  shift 43
	.  error


state 8
	functions:  functions function.    (8)

	.  reduce 8 (src line 131)


state 9
	statements:  statement.    (26)

	.  reduce 26 (src line 166)


state 10
	statements:  FOR.typeDef IDENTIFIER ASSIGNMENT assignrhs SEMICOLON expr SEMICOLON assignment DO statements DONE 
	statement:  FOR.expr SEMICOLON assignment DO statements DONE 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	INT  shift 31
	BOOL  shift 32
	CHAR  shift 33
	STRING  shift 34
	PAIR  shift 35
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 46
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 45
	arrayelem  goto 54
	pairliter  goto 53
	basetype  goto 25
	typeDef  goto 44
	arraytype  goto 26
	pairtype  goto 27
	fieldaccess  goto 52

state 11
	function:  typeDef.IDENTIFIER OPENROUND CLOSEROUND IS statements END 
	function:  typeDef.IDENTIFIER OPENROUND paramlist CLOSEROUND IS statements END 
	statement:  typeDef.IDENTIFIER ASSIGNMENT assignrhs 

	IDENTIFIER  shift 66
	.  error


state 12
	statement:  SKIP.    (28)

	.  reduce 28 (src line 175)


state 13
	statement:  assignment.    (30)

	.  reduce 30 (src line 177)


state 14
	statement:  READ.assignlhs 

	THIS  shift 38
	FST  shift 39
	SND  shift 40
	IDENTIFIER  shift 68
	.  error

	assignlhs  goto 67
	pairelem  goto 37
	arrayelem  goto 36
	fieldaccess  goto 69

state 15
	statement:  FREE.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 70
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 16
	statement:  RETURN.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 72
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 17
	statement:  EXIT.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 73
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 18
	statement:  PRINT.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 74
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 19
	statement:  PRINTLN.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 75
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 20
	statement:  IF.expr THEN statements ELSE statements FI 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 76
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 21
	statement:  WHILE.expr DO statements DONE 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 77
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 22
	statement:  BEGIN.statements END 

	error  shift 23
	BEGIN  shift 22
	THIS  shift 38
	SKIP  shift 12
	READ  shift 14
	FREE  shift 15
	RETURN  shift 16
	EXIT  shift 17
	PRINT  shift 18
	PRINTLN  shift 19
	IF  shift 20
	WHILE  shift 21
	CALL  shift 24
	FST  shift 39
	SND  shift 40
	INT  shift 31
	BOOL  shift 32
	CHAR  shift 33
	STRING  shift 34
	PAIR  shift 35
	FOR  shift 10
	IDENTIFIER  shift 28
	.  error

	statement  goto 9
	statements  goto 78
	assignlhs  goto 29
	pairelem  goto 37
	arrayelem  goto 36
	basetype  goto 25
	typeDef  goto 79
	arraytype  goto 26
	pairtype  goto 27
	assignment  goto 13
	fieldaccess  goto 30

state 23
	statement:  error.SEMICOLON 
	statement:  error.END 
	statement:  error.FI 
	statement:  error.DONE 

	END  shift 81
	FI  shift 82
	DONE  shift 83
	SEMICOLON  shift 80
	.  error


state 24
	statement:  CALL.IDENTIFIER OPENROUND exprlist CLOSEROUND 
	statement:  CALL.fieldaccess OPENROUND exprlist CLOSEROUND 

	IDENTIFIER  shift 84
	.  error

	fieldaccess  goto 85

state 25
	typeDef:  basetype.    (113)
	arraytype:  basetype.OPENSQUARE CLOSESQUARE 

	OPENSQUARE  shift 86
	.  reduce 113 (src line 286)


state 26
	typeDef:  arraytype.    (114)
	arraytype:  arraytype.OPENSQUARE CLOSESQUARE 

	OPENSQUARE  shift 87
	.  reduce 114 (src line 287)


state 27
	typeDef:  pairtype.    (115)
	arraytype:  pairtype.OPENSQUARE CLOSESQUARE 

	OPENSQUARE  shift 88
	.  reduce 115 (src line 288)


state 28
	assignlhs:  IDENTIFIER.    (15)
	fieldaccess:  IDENTIFIER.DOT IDENTIFIER 
	assignment:  IDENTIFIER.PLUS ASSIGNMENT expr 
	assignment:  IDENTIFIER.SUB ASSIGNMENT expr 
	assignment:  IDENTIFIER.DIV ASSIGNMENT expr 
	assignment:  IDENTIFIER.MUL ASSIGNMENT expr 
	assignment:  IDENTIFIER.MOD ASSIGNMENT expr 
	assignment:  IDENTIFIER.PLUS PLUS 
	assignment:  IDENTIFIER.SUB SUB 
	assignment:  IDENTIFIER.MUL MUL 
	arrayelem:  IDENTIFIER.bracketed 
	typeDef:  IDENTIFIER.    (116)

	DOT  shift 89
	MUL  shift 93
	DIV  shift 92
	MOD  shift 94
	PLUS  shift 90
	SUB  shift 91
	OPENSQUARE  shift 96
	IDENTIFIER  reduce 116 (src line 289)
	.  reduce 15 (src line 152)

	bracketed  goto 95

state 29
	assignment:  assignlhs.ASSIGNMENT assignrhs 

	ASSIGNMENT  shift 97
	.  error


state 30
	assignlhs:  fieldaccess.    (18)
	assignment:  fieldaccess.PLUS ASSIGNMENT expr 
	assignment:  fieldaccess.SUB ASSIGNMENT expr 
	assignment:  fieldaccess.DIV ASSIGNMENT expr 
	assignment:  fieldaccess.MUL ASSIGNMENT expr 
	assignment:  fieldaccess.MOD ASSIGNMENT expr 
	assignment:  fieldaccess.PLUS PLUS 
	assignment:  fieldaccess.SUB SUB 
	assignment:  fieldaccess.MUL MUL 

	MUL  shift 101
	DIV  shift 100
	MOD  shift 102
	PLUS  shift 98
	SUB  shift 99
	.  reduce 18 (src line 155)


state 31
	basetype:  INT.    (117)

	.  reduce 117 (src line 291)


state 32
	basetype:  BOOL.    (118)

	.  reduce 118 (src line 292)


state 33
	basetype:  CHAR.    (119)

	.  reduce 119 (src line 293)


state 34
	basetype:  STRING.    (120)

	.  reduce 120 (src line 294)


state 35
	pairtype:  PAIR.OPENROUND pairelemtype COMMA pairelemtype CLOSEROUND 

	OPENROUND  shift 103
	.  error


state 36
	assignlhs:  arrayelem.    (16)

	.  reduce 16 (src line 153)


state 37
	assignlhs:  pairelem.    (17)

	.  reduce 17 (src line 154)


state 38
	assignlhs:  THIS.DOT IDENTIFIER 

	DOT  shift 104
	.  error


state 39
	pairelem:  FST.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 105
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 40
	pairelem:  SND.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 106
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 41
	class:  CLASS IDENTIFIER.OPEN fieldlist functions CLOSE 

	OPEN  shift 107
	.  error


state 42
	program:  BEGIN classes functions statements END.    (1)

	.  reduce 1 (src line 110)


state 43
	statements:  statements SEMICOLON.statement 

	error  shift 23
	BEGIN  shift 22
	THIS  shift 38
	SKIP  shift 12
	READ  shift 14
	FREE  shift 15
	RETURN  shift 16
	EXIT  shift 17
	PRINT  shift 18
	PRINTLN  shift 19
	IF  shift 20
	WHILE  shift 21
	CALL  shift 24
	FST  shift 39
	SND  shift 40
	INT  shift 31
	BOOL  shift 32
	CHAR  shift 33
	STRING  shift 34
	PAIR  shift 35
	FOR  shift 109
	IDENTIFIER  shift 28
	.  error

	statement  goto 108
	assignlhs  goto 29
	pairelem  goto 37
	arrayelem  goto 36
	basetype  goto 25
	typeDef  goto 79
	arraytype  goto 26
	pairtype  goto 27
	assignment  goto 13
	fieldaccess  goto 30

state 44
	statements:  FOR typeDef.IDENTIFIER ASSIGNMENT assignrhs SEMICOLON expr SEMICOLON assignment DO statements DONE 

	IDENTIFIER  shift 110
	.  error


state 45
	statement:  FOR expr.SEMICOLON assignment DO statements DONE 
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	SEMICOLON  shift 111
	.  error


state 46
	fieldaccess:  IDENTIFIER.DOT IDENTIFIER 
	expr:  IDENTIFIER.    (70)
	arrayelem:  IDENTIFIER.bracketed 
	typeDef:  IDENTIFIER.    (116)

	DOT  shift 89
	OPENSQUARE  shift 96
	IDENTIFIER  reduce 116 (src line 289)
	.  reduce 70 (src line 234)

	bracketed  goto 95

state 47
	expr:  INTEGER.    (64)

	.  reduce 64 (src line 228)


state 48
	expr:  TRUE.    (65)

	.  reduce 65 (src line 229)


state 49
	expr:  FALSE.    (66)

	.  reduce 66 (src line 230)


state 50
	expr:  CHARACTER.    (67)

	.  reduce 67 (src line 231)


state 51
	expr:  STRINGCONST.    (68)

	.  reduce 68 (src line 232)


state 52
	expr:  fieldaccess.    (69)

	.  reduce 69 (src line 233)


state 53
	expr:  pairliter.    (71)

	.  reduce 71 (src line 235)


state 54
	expr:  arrayelem.    (72)

	.  reduce 72 (src line 236)


state 55
	expr:  NOT.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 125
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 56
	expr:  LEN.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 126
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 57
	expr:  ORD.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 127
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 58
	expr:  CHR.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 128
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 59
	expr:  SUB.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 129
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 60
	expr:  PLUS.expr 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 130
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 61
	expr:  OPENROUND.expr CLOSEROUND 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 131
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 62
	expr:  CALL.IDENTIFIER OPENROUND exprlist CLOSEROUND 
	expr:  CALL.fieldaccess OPENROUND exprlist CLOSEROUND 

	IDENTIFIER  shift 132
	.  error

	fieldaccess  goto 133

state 63
	expr:  THIS.DOT IDENTIFIER 

	DOT  shift 134
	.  error


state 64
	expr:  NEWPAIR.OPENROUND expr COMMA expr CLOSEROUND 

	OPENROUND  shift 135
	.  error


state 65
	pairliter:  NULL.    (104)

	.  reduce 104 (src line 273)


state 66
	function:  typeDef IDENTIFIER.OPENROUND CLOSEROUND IS statements END 
	function:  typeDef IDENTIFIER.OPENROUND paramlist CLOSEROUND IS statements END 
	statement:  typeDef IDENTIFIER.ASSIGNMENT assignrhs 

	OPENROUND  shift 136
	ASSIGNMENT  shift 137
	.  error


state 67
	statement:  READ assignlhs.    (31)

	.  reduce 31 (src line 178)


state 68
	assignlhs:  IDENTIFIER.    (15)
	fieldaccess:  IDENTIFIER.DOT IDENTIFIER 
	arrayelem:  IDENTIFIER.bracketed 

	DOT  shift 89
	OPENSQUARE  shift 96
	.  reduce 15 (src line 152)

	bracketed  goto 95

state 69
	assignlhs:  fieldaccess.    (18)

	.  reduce 18 (src line 155)


state 70
	statement:  FREE expr.    (32)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  reduce 32 (src line 179)


state 71
	fieldaccess:  IDENTIFIER.DOT IDENTIFIER 
	expr:  IDENTIFIER.    (70)
	arrayelem:  IDENTIFIER.bracketed 

	DOT  shift 89
	OPENSQUARE  shift 96
	.  reduce 70 (src line 234)

	bracketed  goto 95

state 72
	statement:  RETURN expr.    (33)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  reduce 33 (src line 180)


state 73
	statement:  EXIT expr.    (34)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  reduce 34 (src line 181)


state 74
	statement:  PRINT expr.    (35)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  reduce 35 (src line 182)


state 75
	statement:  PRINTLN expr.    (36)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  reduce 36 (src line 183)


state 76
	statement:  IF expr.THEN statements ELSE statements FI 
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	THEN  shift 138
	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  error


state 77
	statement:  WHILE expr.DO statements DONE 
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	DO  shift 139
	MUL  shift 114
	DIV  shift 116
	MOD  shift 115
	PLUS  shift 112
	SUB  shift 113
	AND  shift 123
	OR  shift 124
	GT  shift 118
	GTE  shift 120
	LT  shift 117
	LTE  shift 119
	EQ  shift 121
	NEQ  shift 122
	.  error


state 78
	statements:  statements.SEMICOLON statement 
	statement:  BEGIN statements.END 

	END  shift 140
	SEMICOLON  shift 43
	.  error


state 79
	statement:  typeDef.IDENTIFIER ASSIGNMENT assignrhs 

	IDENTIFIER  shift 141
	.  error


state 80
	statement:  error SEMICOLON.    (41)

	.  reduce 41 (src line 191)


state 81
	statement:  error END.    (42)

	.  reduce 42 (src line 195)


state 82
	statement:  error FI.    (43)

	.  reduce 43 (src line 198)


state 83
	statement:  error DONE.    (44)

	.  reduce 44 (src line 202)


state 84
	fieldaccess:  IDENTIFIER.DOT IDENTIFIER 
	statement:  CALL IDENTIFIER.OPENROUND exprlist CLOSEROUND 

	DOT  shift 89
	OPENROUND  shift 142
	.  error


state 85
	statement:  CALL fieldaccess.OPENROUND exprlist CLOSEROUND 

	OPENROUND  shift 143
	.  error


state 86
	arraytype:  basetype OPENSQUARE.CLOSESQUARE 

	CLOSESQUARE  shift 144
	.  error


state 87
	arraytype:  arraytype OPENSQUARE.CLOSESQUARE 

	CLOSESQUARE  shift 145
	.  error


state 88
	arraytype:  pairtype OPENSQUARE.CLOSESQUARE 

	CLOSESQUARE  shift 146
	.  error


state 89
	fieldaccess:  IDENTIFIER DOT.IDENTIFIER 

	IDENTIFIER  shift 147
	.  error


state 90
	assignment:  IDENTIFIER PLUS.ASSIGNMENT expr 
	assignment:  IDENTIFIER PLUS.PLUS 

	PLUS  shift 149
	ASSIGNMENT  shift 148
	.  error


state 91
	assignment:  IDENTIFIER SUB.ASSIGNMENT expr 
	assignment:  IDENTIFIER SUB.SUB 

	SUB  shift 151
	ASSIGNMENT  shift 150
	.  error


state 92
	assignment:  IDENTIFIER DIV.ASSIGNMENT expr 

	ASSIGNMENT  shift 152
	.  error


state 93
	assignment:  IDENTIFIER MUL.ASSIGNMENT expr 
	assignment:  IDENTIFIER MUL.MUL 

	MUL  shift 154
	ASSIGNMENT  shift 153
	.  error


state 94
	assignment:  IDENTIFIER MOD.ASSIGNMENT expr 

	ASSIGNMENT  shift 155
	.  error


state 95
	arrayelem:  IDENTIFIER bracketed.    (101)
	bracketed:  bracketed.OPENSQUARE expr CLOSESQUARE 

	OPENSQUARE  shift 156
	.  reduce 101 (src line 268)


state 96
	bracketed:  OPENSQUARE.expr CLOSESQUARE 

	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	expr  goto 157
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 97
	assignment:  assignlhs ASSIGNMENT.assignrhs 

	NEW  shift 162
	THIS  shift 63
	NEWPAIR  shift 64
	CALL  shift 62
	FST  shift 39
	SND  shift 40
	NOT  shift 55
	LEN  shift 56
	ORD  shift 57
	CHR  shift 58
	PLUS  shift 60
	SUB  shift 59
	TRUE  shift 48
	FALSE  shift 49
	NULL  shift 65
	OPENSQUARE  shift 163
	OPENROUND  shift 61
	STRINGCONST  shift 51
	IDENTIFIER  shift 71
	INTEGER  shift 47
	CHARACTER  shift 50
	.  error

	assignrhs  goto 158
	expr  goto 159
	pairelem  goto 161
	arrayliter  goto 160
	arrayelem  goto 54
	pairliter  goto 53
	fieldaccess  goto 52

state 98
	assignment:  fieldaccess PLUS.ASSIGNMENT expr 
	assignment:  fieldaccess PLUS.PLUS 

	PLUS  shift 165
	ASSIGNMENT  shift 164
	.  error


state 99
	assignment:  fieldaccess SUB.ASSIGNMENT expr 
	assignment:  fieldaccess SUB.SUB 

	SUB  shift 167
	ASSIGNMENT  shift 166
	.  error


state 100
	assignment:  fieldaccess DIV.ASSIGNMENT expr 

	ASSIGNMENT  shift 168
	.  error


state 101
	assignment:  fieldaccess MUL.ASSIGNMENT expr 
	assignment:  fieldaccess MUL.MUL 

	MUL  shift 170
	ASSIGNMENT  shift 169
	.  error

